<resources>
    <string name="app_name">FinaBuddy</string>
    <string name="title">Login</string>
    <string name="password">Contraseña :</string>
    <string name="user">Usuario :</string>
    <string name="register">No tienes cuenta? Registrate.</string>
    <string name="login">Iniciar Sesión</string>
    <string name="guardar">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="confirm">Confirmar Contraseña :</string>
    <string name="WrongRegisterPass">Las contraseñas deben ser iguales</string>
    <string name="Empty">Usuario o contraseña vacios</string>
    <string name="WrongUser">Usuario incorrecto</string>
    <string name="WrongPwd">Contraseña incorrecta</string>
    <string name="tvUserMain"/>
    <string name="tvPwdMain"/>
    <string name="close">Cerrar Sesión</string>
    <string name="IncompleteRegister">Registro fallido</string>
    <string name="finapptitle">FinaBuddy</string>
    <string name="shortPassword">La contraseña debe ser mayor a 6 caracteres</string>
    <string name="tvIngresos">Ingresos : </string>
    <string name="tvPayDay">Fecha de pago : </string>
    <string name="tvGastos">Gastos :</string>
    <string name="tvIngresosValue"/>
    <string name="tvPayDayValue"/>
    <string name="tvGastosValue"/>
    <string name="tvUserRegistered"/>
    <string name="tvUltimosGastos">Ultimos Gastos:</string>
</resources>
