<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:padding="20dp" android:background="@drawable/editable">

    <ImageView
            android:id="@+id/bgappiconlogin"
            android:scaleType="centerCrop"
            android:layout_width="138dp"
            android:layout_height="219dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.529"/>
    <EditText
            android:layout_width="168dp"
            android:layout_height="36dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edPass"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/edUser"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.866"
            android:background="@drawable/textview_shadow" android:shadowColor="@color/black" android:shadowDx="5"
            android:shadowDy="10" android:shadowRadius="20" app:layout_constraintStart_toStartOf="@+id/tvtitle"
            android:gravity="center" android:textAlignment="center"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:id="@+id/tvPassRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"

            android:fontFamily="sans-serif-black"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="gravity" android:shadowColor="@color/black" android:textColor="@color/white"
            android:shadowDx="5" android:shadowDy="10" android:shadowRadius="20" android:textSize="25sp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/tvUser" app:layout_constraintStart_toStartOf="@+id/tvPassRegister"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvtitle"
            android:fontFamily="sans-serif-black"
            android:textAlignment="gravity" android:shadowColor="@color/black" android:textColor="@color/white"
            android:shadowDx="5" android:shadowDy="10" android:shadowRadius="20" android:textSize="25sp"
    />
    <TextView
            android:text="@string/title"
            android:layout_width="180dp"
            android:layout_height="96dp"
            android:id="@+id/tvtitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="52sp" android:textColor="@color/white" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.402"
            android:fontFamily="@font/scriptmtbold" android:textAlignment="center" android:shadowDx="5"
            android:shadowDy="10" android:shadowColor="#000000" android:shadowRadius="20"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="168dp"
            android:layout_height="36dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edUser"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/tvtitle"
            app:layout_constraintEnd_toEndOf="@+id/edPass" android:textSize="20sp"
            app:layout_constraintHorizontal_bias="1.0"
            android:fontFamily="sans-serif-condensed-light" android:layout_marginStart="8dp"
            android:background="@drawable/textview_shadow"
            android:shadowColor="#85000000" android:shadowDx="5" android:shadowDy="10" android:shadowRadius="20"
            app:layout_constraintStart_toStartOf="@+id/tvtitle" android:gravity="center"
            android:textAlignment="center"/>
    <Button
            android:text="@string/login"
            android:layout_width="143dp"
            android:layout_height="46dp"
            android:id="@+id/btLogin" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edPass" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.219"
            android:fontFamily="sans-serif-condensed" android:textSize="18sp"
            android:background="@drawable/button_shadow" android:textAlignment="center"
            android:shadowColor="#57000000" android:shadowDx="5" android:shadowDy="10" android:shadowRadius="20"/>
    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/btLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.296"
            android:fontFamily="sans-serif-condensed"
            android:clickable="true"
            android:textColor="@color/white" android:focusable="true" android:textColorHighlight="@color/whitesmoke"
            android:textColorHint="@color/whitesmoke" android:textSize="18sp"/>-
</androidx.constraintlayout.widget.ConstraintLayout>